# book-store-admin

./: CMakeLists.txt  book-store-admin.cpp  book-store-admin.h
include/: Book.h  utilites.h
src/: Book.cpp  CMakeLists.txt  book-store-admin.cpp  utilites.cpp
